# medicine-agents

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
apps/api/src/medicine_agents/: __init__.py  __main__.py
apps/api/src/medicine_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/api/src/medicine_agents/application/: __init__.py  generate_case.py  ports.py
apps/api/src/medicine_agents/domain/: __init__.py  (+1 more)
apps/web/: README.md
config/diseases/: mvp.yaml
config/prompts/: README.md
config/quality-rules/: README.md
data/: README.md
data/samples/orders/: synthetic-order.json
docs/design/: 2026-07-22-file-first-mvp-design.md  2026-07-22-文件优先MVP设计.md
docs/governance/: MVP医学内容发布治理规范.md
docs/guides/: 医学团队资料准备指南.md
docs/quality/: 质量评价与统计分析方案.md
docs/requirements/: 产品需求文档.md
docs/security/: repository-data-policy.md  仓库数据与隐私策略.md
project/: CHANGELOG.md  CURRENT_STATUS.md  DECISION_LOG.md  INPUT_REGISTER.md  RISK_REGISTER.md  ROADMAP.md  STAGE_GATES.md
project/plans/: 2026-07-22-S0与S1实施计划.md
project/stages/: S0.md  S1.md
scripts/: bootstrap.py  check-sensitive-content.ps1  check_sensitive_content.py  run_api.py  test.py
tests/: conftest.py
tests/application/: test_generate_case.py
tests/domain/: test_models.py
tests/infrastructure/: test_file_case_repository.py
tests/interfaces/: test_api.py
tests/project/: test_project_baseline.py
tests/security/: test_check_sensitive_content.py  test_cross_platform_contract.py
(+4 files in other folders)
